fix: ajuste dark mode

--- a/components/CarrosselDoacoes.module.css
+++ b/components/CarrosselDoacoes.module.css
@@ -50,6 +50,7 @@
   .image {
     border-radius: 15px 15px 0 0;
     object-fit: cover;
+    width: 100%;
   }
   
   .text {
